# apex-10

./: .env.example  .gitignore  002_paper_trade_legs.sql  =1.3.0  APPROVED_RULES.md  README.md  debug_api.py  pyproject.toml  requirements.txt  schema.sql  test_pipeline.py
.github/workflows/: cache.yml  ci.yml  fetch_schedule.yml  inference.yml  retrain.yml  score.yml  settlement.yml  supabase_keepalive.yml  ticket.yml
apex10/: __init__.py  config.py  db.py
apex10/cache/: api_football.py  backfill_results.py  cache.py  cache_log.py  clubelo.py  fbref.py  odds_loader.py  oddsportal.py  rho.py  tactics_ppda.py  understat.py  validate.py
apex10/diagnostics/: LightGBM_FAILED_20260318_2219_features.json  LightGBM_FAILED_20260318_2222_features.json  LightGBM_PASSED_20260318_2234_features.json  XGBoost_PASSED_20260318_2212_features.json  XGBoost_PASSED_20260318_2215_features.json  XGBoost_PASSED_20260318_2219_features.json  XGBoost_PASSED_20260318_2222_features.json  (+1 more)
scripts/: health_check.py  init_db.py
tests/: test_api_football.py  test_cache.py  test_cache_log.py  test_cache_orchestrator.py  test_calibration.py  test_clubelo.py  test_config.py  test_db.py  test_dixon_coles.py  test_edge.py  test_features.py  test_gates.py  test_health.py  test_lgbm_model.py  test_lineup_model.py  test_notify.py  test_odds_loader.py  test_optimizer.py  test_paper_trading.py  test_reinvestment.py  test_retrain.py  test_rho.py  test_score.py  test_shap_analysis.py  test_tiers.py  test_understat.py  test_validate.py  test_vig.py  test_walk_forward.py  test_xgb_model.py
(+46 files in other folders)
